integration tests for calculators