@@ -20,11 +20,15 @@
                 <configuration>
                     <argLine>
                         @{argLine}
+                        --add-opens javamm.interpreter/academy.devonline.javamm.interpreter=ALL-UNNAMED
+                        --add-opens javamm.interpreter/academy.devonline.javamm.interpreter.integration=ALL-UNNAMED
                         --add-opens javamm.interpreter/academy.devonline.javamm.interpreter.component.impl=ALL-UNNAMED
                         --add-opens
                         javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.operation=ALL-UNNAMED
                         --add-opens
                         javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.operation.simple=ALL-UNNAMED
+                        --add-opens
+                        javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.calculator.arithmetic=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
